# first_cmake_project

./: CMakeLists.txt  Jenkinsfile  README.md  build.sh  configure.sh  run.sh  unit_tests.cpp
app/: CMakeLists.txt  main.cpp
cmake/toolchain/: x64-ARM-Linux.cmake  x86-64-Windows.cmake  x86-64-macOS.cmake
scripts/: run.sh
src/: CMakeLists.txt
src/mylib1/: CMakeLists.txt  mylib1.cpp  mylib1.h
src/mylib2/: CMakeLists.txt  mylib2.cpp  mylib2.h
